[package]
name = "escr-ext"
version = "0.1.0"
edition = "2024"
authors = ["Eduardo Loback <...>", "Mateus Barbosa <barbosamat16@gmail.com>"]
description = "Extensions for ESRC, an event-sourcing library for Rust."
readme = "README.md"
repository = "https://github.com/eloback/esrc-ext"
license = "MIT"
keywords = ["esrc", "extensions", "event-sourcing"]
categories = ["asynchronous", "data-structures", "encoding", "serialization"]


[dependencies]
esrc = { git = "https://github.com/eloback/esrc.git", version = "0.1.0", features = [
    "derive",
] }
