[package]
name = "escr-ext"
version = "0.1.0"
edition = "2024"
authors = ["Eduardo Loback <...>", "Mateus Barbosa <barbosamat16@gmail.com>"]
description = "Extensions for ESRC, an event-sourcing library for Rust."
readme = "README.md"
repository = "https://github.com/eloback/esrc-ext"
license = "MIT"
keywords = ["esrc", "extensions", "event-sourcing"]
categories = ["asynchronous", "data-structures", "encoding", "serialization"]

[dependencies]
esrc = { git = "https://github.com/eloback/esrc.git", version = "0.1.0", features = [
    "derive",
] }
nats-dead-letter = { git = "https://github.com/eloback/nats-dead-letter.git", version = "0.1.0" }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v7", "serde"] }
thiserror = "2.0"
serde_json = "1.0"
async-nats = "0.42"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
url = "2.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }

[features]
default = []
